--- a/Reg2015/Reg2015.csproj
+++ b/Reg2015/Reg2015.csproj
@@ -157,6 +157,11 @@
       <SubType>Component</SubType>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Reports\CardFormN_025u.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CardFormN_025u.rpt</DependentUpon>
+    </Compile>
     <Compile Include="Reports\DataAdapters.cs" />
     <Compile Include="Reports\DocService.cs">
       <DependentUpon>DocService.rpt</DependentUpon>
@@ -331,6 +336,10 @@
     <EmbeddedResource Include="Reports\CardDefault.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CardDefault.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\CardFormN_025u.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CardFormN_025u.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\DocService.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
